--- a/src/v-color.css
+++ b/src/v-color.css
@@ -1,6 +1,89 @@
-.heading {
-  font-size: 26px;
+.vcolor__container {
+  box-sizing: initial;
+  width: 250px;
+  background: #fff;
+  border-radius: 2px;
+  box-shadow: 0 0 2px rgba(0, 0, 0, .3), 0 4px 8px rgba(0, 0, 0, .3);
+  font-family: Menlo;
 }
-.heading-primary {
-  color: #333;
+
+
+.vcolor__layout__table {
+  display: table;
+}
+.vcolor__layout__row {
+  display: table-row;
+}
+.vcolor__layout__cell {
+  display: table-cell;
+  vertical-align: top;
+}
+.vcolor__ctrl__bar {
+  position: relative;
+  height: 10px;
+  margin-bottom: 8px;
+}
+.vcolor__ctrl__circle {
+  position: absolute;
+  left: 100%;
+  width: 12px;
+  height: 12px;
+  border-radius: 50%;
+  transform: translate(-6px, -1px);
+  background-color: rgb(248, 248, 248);
+  box-shadow: rgba(0, 0, 0, 0.368627) 0px 1px 4px 0px;
+  cursor: default;
+}
+.vcolor__ctrl__circle__transparent {
+  background-color: transparent;
+  transform: translate(-50%, -50%);
+  box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3), 0 0 1px 2px rgba(0,0,0,.4);
+}
+
+
+.vcolor__saturation__wrap {
+    width: 100%;
+    padding-bottom: 55%;
+    position: relative;
+    border-radius: 2px 2px 0 0;
+    overflow: hidden;
+}
+.vcolor__saturation__pane,
+.vcolor__saturation__white,
+.vcolor__saturation__black {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+}
+.vcolor__saturation__white {
+  background: linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));
+}
+.vcolor__saturation__black {
+  background: linear-gradient(0deg, #000, transparent);
+}
+
+.vcolor__ctrl__pane {
+  position: relative;
+  width: 100%;
+  box-sizing: border-box;
+  padding: 16px 16px 12px;
+}
+
+.vcolor__preview__cell {
+  width: 32px;
+}
+.vcolor__preview__circle {
+  width: 20px;
+  height: 20px;
+  border-radius: 50%;
+}
+
+
+.vcolor__hue__bar {
+  background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
+}
+.vcolor__alpha__bar {
+   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==") left center, linear-gradient(to right, rgba(81, 0, 255, 0) 0%, rgb(81, 0, 255) 100%)
 }
