--- a/src/v-color.css
+++ b/src/v-color.css
@@ -1,4 +1,4 @@
-.vcolor__container {
+.container {
   box-sizing: initial;
   width: 250px;
   background: #fff;
@@ -7,23 +7,24 @@
   font-family: Menlo;
 }
 
-
-.vcolor__layout__table {
+.layout-table {
   display: table;
 }
-.vcolor__layout__row {
+.layout-row {
   display: table-row;
 }
-.vcolor__layout__cell {
+.layout-cell {
   display: table-cell;
   vertical-align: top;
 }
-.vcolor__ctrl__bar {
+
+
+.ctrl-bar {
   position: relative;
   height: 10px;
   margin-bottom: 8px;
 }
-.vcolor__ctrl__circle {
+.ctrl-circle {
   position: absolute;
   left: 100%;
   width: 12px;
@@ -34,56 +35,62 @@
   box-shadow: rgba(0, 0, 0, 0.368627) 0px 1px 4px 0px;
   cursor: default;
 }
-.vcolor__ctrl__circle__transparent {
+.ctrl-circle-transparent {
   background-color: transparent;
   transform: translate(-50%, -50%);
   box-shadow: 0 0 0 1.5px #fff, inset 0 0 1px 1px rgba(0,0,0,.3), 0 0 1px 2px rgba(0,0,0,.4);
 }
 
 
-.vcolor__saturation__wrap {
+.saturation-wrap {
     width: 100%;
     padding-bottom: 55%;
     position: relative;
     border-radius: 2px 2px 0 0;
     overflow: hidden;
 }
-.vcolor__saturation__pane,
-.vcolor__saturation__white,
-.vcolor__saturation__black {
+.saturation-pane,
+.saturation-white,
+.saturation-black {
     position: absolute;
     top: 0;
     left: 0;
     right: 0;
     bottom: 0;
 }
-.vcolor__saturation__white {
-  background: linear-gradient(90deg, #fff, hsla(0, 0%, 100%, 0));
+.saturation-white {
+  background: linear-gradient(90deg, #fff, rgba(255, 255, 255, 0));
 }
-.vcolor__saturation__black {
+.saturation-black {
   background: linear-gradient(0deg, #000, transparent);
 }
 
-.vcolor__ctrl__pane {
+.ctrl-pane {
   position: relative;
   width: 100%;
   box-sizing: border-box;
   padding: 16px 16px 12px;
 }
 
-.vcolor__preview__cell {
+.preview-cell {
   width: 32px;
 }
-.vcolor__preview__circle {
+.preview-circle {
   width: 20px;
   height: 20px;
   border-radius: 50%;
 }
 
-
-.vcolor__hue__bar {
+.hue-bar {
   background: linear-gradient(to right, rgb(255, 0, 0) 0%, rgb(255, 255, 0) 17%, rgb(0, 255, 0) 33%, rgb(0, 255, 255) 50%, rgb(0, 0, 255) 67%, rgb(255, 0, 255) 83%, rgb(255, 0, 0) 100%);
 }
-.vcolor__alpha__bar {
-   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==") left center, linear-gradient(to right, rgba(81, 0, 255, 0) 0%, rgb(81, 0, 255) 100%)
+.alpha-bar {
+   background: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAABAAAAAQCAYAAAAf8/9hAAAAMUlEQVQ4T2NkYGAQYcAP3uCTZhw1gGGYhAGBZIA/nYDCgBDAm9BGDWAAJyRCgLaBCAAgXwixzAS0pgAAAABJRU5ErkJggg==") left center;
+}
+.alpha-band {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 10px;
 }
